--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -46,7 +46,7 @@
           <span class='arrow'></span>
         </dd.Trigger>
 
-        <dd.Content @tagName="ul" @id="doc-links" class="dropdown">
+        <dd.Content @tagName="ul" id="doc-links" class="dropdown">
           <li><a href='https://doc.rust-lang.org/cargo/getting-started/'>Getting Started</a></li>
           <li><a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a></li>
           <li><a href='https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html'>Specifying Dependencies</a></li>
