--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -14,7 +14,7 @@
       <label class="label" for='new-owner-username'>
         Username
       </label>
-      <Input @type="text" @id="new-owner-username" @value={{this.username}} placeholder="Username" class="form-control space-right" @name="username" />
+      <Input @type="text" id="new-owner-username" @value={{this.username}} placeholder="Username" class="form-control space-right" @name="username" />
 
       {{#if this.error}}
         <div class='error'>
