Convert dropdown triggers from links to buttons

--- a/app/styles/crate.scss
+++ b/app/styles/crate.scss
@@ -83,10 +83,11 @@
     .cur, .total { color: $main-color; font-weight: bold; }
 
     .dropdown-container { font-size: 85%; }
-    a.dropdown {
+    .dropdown-button {
         background-color: $main-bg-dark;
         padding: 10px;
         display: inline-block;
+        border: none;
         border-radius: 5px;
     }
 }
