--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -19,7 +19,7 @@
   <div class='sort'>
     <span class='small'>Sort by</span>
     <Dropdown class="dropdown-container" as |dd|>
-      <dd.Trigger @tagName="a" class="dropdown">
+      <dd.Trigger class="dropdown dropdown-button">
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
         <span class='arrow'></span>
