--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -17,7 +17,7 @@
   <div class='sort' data-test-categories-sort>
     <span class='small'>Sort by</span>
     <Dropdown class="dropdown-container" as |dd|>
-      <dd.Trigger @tagName="a" class="dropdown" data-test-current-order>
+      <dd.Trigger class="dropdown dropdown-button" data-test-current-order>
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
         <span class='arrow'></span>
