--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -18,7 +18,7 @@
   <div class='sort' data-test-keyword-sort>
     <span class='small'>Sort by</span>
     <Dropdown class="dropdown-container" as |dd|>
-      <dd.Trigger @tagName="a" class="dropdown" data-test-current-order>
+      <dd.Trigger class="dropdown dropdown-button" data-test-current-order>
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
         <span class='arrow'></span>
