--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -33,7 +33,7 @@
       <div class='sort'>
         <span class='small'>Sort by</span>
         <Dropdown class="dropdown-container" as |dd|>
-          <dd.Trigger @tagName="a" class="dropdown">
+          <dd.Trigger class="dropdown dropdown-button">
             {{svg-jar "sort"}}
             {{ this.currentSortBy }}
             <span class='arrow'></span>
