Revert "application: Simplify max width assignment"
This reverts commit a5dcbce630d610121724ae667bf6718fab1be439.

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -26,7 +26,10 @@ noscript {
 }
 
 .application {
-    max-width: 960px;
+    width: 960px;
+    @media only screen and (max-width: 960px) {
+        width: 100%;
+    }
 }
 
 .main {
