--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -10,17 +10,7 @@
 
     <div class='right'>
       {{#if this.session.currentUser}}
-        <button type="button" class='tan-button' {{on "click" (perform this.toggleFollowTask)}} data-test-follow-button>
-          {{#if (or this.followStateTask.isRunning this.toggleFollowTask.isRunning)}}
-            <img src="/assets/ajax-loader.gif" data-test-spinner>
-          {{else}}
-            {{#if this.following}}
-              Unfollow
-            {{else}}
-              Follow
-            {{/if}}
-          {{/if}}
-        </button>
+        <FollowButton @crate={{this.crate}}/>
       {{/if}}
     </div>
   </div>
