--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -20,6 +20,11 @@ body {
     align-items: center;
 }
 
+abbr[title] {
+    text-decoration: none;
+    border-bottom: 1px dotted;
+}
+
 noscript {
     color: white;
     padding: 10px 0;
