Move categories footer styling into CSS module

--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -61,7 +61,7 @@
 
 <Pagination @pages={{this.pages}} @prevPage={{this.prevPage}} @nextPage={{this.nextPage}} />
 
-<div class='categories-footer'>
+<div local-class='categories-footer'>
   Want to categorize your crate?
   <a href='http://doc.crates.io/manifest.html#package-metadata'>Add metadata!</a>
 </div>
