crate.version: Move crate README styling into CSS module

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -61,7 +61,7 @@
         {{/if}}
       </div>
       {{#if this.crate.readme}}
-        <section class="crate-readme" aria-label="Readme" {{highlight-syntax selector="pre > code"}}>
+        <section local-class="crate-readme" aria-label="Readme" {{highlight-syntax selector="pre > code"}}>
           {{html-safe this.crate.readme}}
         </section>
       {{else}}
