crate.version: Move `crate-size` CSS class into CSS module

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -89,7 +89,7 @@
 
         {{#if this.currentVersion.crate_size}}
           <div>
-            <div class='crate-size'><span class='small'>Crate Size</span></div>
+            <div local-class='crate-size'><span class='small'>Crate Size</span></div>
             <div class='size'>{{format-crate-size this.currentVersion.crate_size}}</div>
           </div>
         {{/if}}
