--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -5,6 +5,12 @@
     top: 4px;
 }
 
+.crate-size {
+    color: $main-color-light;
+    font-size: 90%;
+    line-height: 25px;
+}
+
 .crate-readme {
     line-height: 1.5;
     overflow-wrap: break-word;
