crate.version: Move `size` CSS class into CSS module

--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -11,6 +11,11 @@
     line-height: 25px;
 }
 
+.size {
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
 .crate-readme {
     line-height: 1.5;
     overflow-wrap: break-word;
