--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -90,7 +90,7 @@
         {{#if this.currentVersion.crate_size}}
           <div>
             <div local-class='crate-size'><span class='small'>Crate Size</span></div>
-            <div class='size'>{{format-crate-size this.currentVersion.crate_size}}</div>
+            <div local-class='size'>{{format-crate-size this.currentVersion.crate_size}}</div>
           </div>
         {{/if}}
 
