DownloadGraph: Move `graph-data` CSS class assignment to the parent template

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -262,7 +262,7 @@
     </div>
     <div class='graph'>
       <h4>Downloads over the last 90 days</h4>
-      <DownloadGraph @data={{this.downloadData}} />
+      <DownloadGraph @data={{this.downloadData}} class="graph-data" />
     </div>
   </div>
 {{/unless}}
