crate.version: Move `graph` CSS class into CSS module

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -260,7 +260,7 @@
         <span class='desc small'>Versions published</span>
       </div>
     </div>
-    <div class='graph'>
+    <div local-class='graph'>
       <h4>Downloads over the last 90 days</h4>
       <DownloadGraph @data={{this.downloadData}} local-class="graph-data" />
     </div>
