--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -47,6 +47,19 @@
     }
 }
 
+.graph {
+    flex-grow: 10;
+    width: 100%;
+    margin: 30px 0;
+    padding-bottom: 20px;
+
+    h4 { color: $main-color-light; }
+
+    @media only percy {
+        display: none;
+    }
+}
+
 .graph-data {
     width: 100%;
     height: 500px;
