crate.version: Move `stat` CSS classes into CSS module

--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -47,6 +47,26 @@
     }
 }
 
+.stat {
+    border-left: 1px solid $gray-border;
+    padding: 10px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    flex-grow: 1;
+
+    .num {
+        font-size: 160%;
+        font-weight: bold;
+        margin-bottom: 4px;
+    }
+
+    .num__align {
+        position: relative;
+        bottom: 0.4rem;
+    }
+}
+
 .graph {
     flex-grow: 10;
     width: 100%;
