--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -235,7 +235,7 @@
 
 {{#unless this.currentVersion.yanked}}
   <div id='crate-downloads'>
-    <div class='stats'>
+    <div local-class='stats'>
       {{#if this.downloadsContext.num}}
         <h3 data-test-crate-stats-label>
           Stats Overview for {{this.downloadsContext.num}}
