crate.version: Move `crate-downloads` CSS class into CSS module

--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -47,6 +47,13 @@
     }
 }
 
+.crate-downloads {
+    display: flex;
+    flex-wrap: wrap;
+
+    h3 { width: 100%; }
+}
+
 .stats {
     flex-grow: 7;
     display: flex;
