--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -234,7 +234,7 @@
 </div>
 
 {{#unless this.currentVersion.yanked}}
-  <div id='crate-downloads'>
+  <div local-class='crate-downloads'>
     <div local-class='stats'>
       {{#if this.downloadsContext.num}}
         <h3 data-test-crate-stats-label>
