--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -78,7 +78,7 @@
     <section class='authorship' aria-label="Crate metadata">
       <div class='top'>
         <div>
-          <div class='last-update'><span class='small'>Last Updated</span></div>
+          <div local-class='last-update'><span class='small'>Last Updated</span></div>
           <div class='{{if this.currentVersion.crate_size 'date-with-small-margin-bot' 'date'}}'>{{moment-from-now this.crate.updated_at}}</div>
           {{#each this.crate.annotated_badges as |badge|}}
             <p>
