crate.version: Remove unused `authors` CSS class assignment

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -94,7 +94,7 @@
           </div>
         {{/if}}
 
-        <div class="authors">
+        <div>
           <h3>Authors</h3>
           <ul>
             {{#each this.displayedAuthors as |author|}}
