--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -17,6 +17,19 @@
     margin-bottom: 40px;
 }
 
+:global(.crate-info .authorship) {
+    ul.owners, ul.keywords {
+        display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+            margin: 0 7px 7px 0;
+        }
+    }
+}
 .crate-readme {
     line-height: 1.5;
     overflow-wrap: break-word;
