crate.version: Move `about` CSS class into CSS module

--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -30,6 +30,12 @@
         }
     }
 }
+
+.about {
+    line-height: 180%;
+    margin-bottom: 40px;
+}
+
 .crate-readme {
     line-height: 1.5;
     overflow-wrap: break-word;
