--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -66,7 +66,7 @@
         </section>
       {{else}}
         {{#if this.crate.description}}
-          <div class='about'>
+          <div local-class='about'>
             <h3>About This Package</h3>
             <p>{{ this.crate.description }}</p>
           </div>
