--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -42,7 +42,7 @@
 </div>
 
 <div class='crate-info'>
-  <div class='docs'>
+  <div local-class="docs">
     {{#if this.currentVersion.yanked}}
       <p>
         This crate has been yanked, but it is still available for download for other crates that
