--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -50,6 +50,21 @@
     line-height: 25px;
 }
 
+.date {
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+/*
+    Since crate_size is a new field, older crates won't have it.
+    Preserve behaviour for older crates. For newer ones, keep
+    `Crate Size` closer to last updated.
+*/
+.date-with-small-margin-bot {
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
 .size {
     font-weight: bold;
     margin-bottom: 40px;
