--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -41,7 +41,7 @@
   </div>
 </div>
 
-<div class='crate-info'>
+<div local-class='crate-info'>
   <div local-class="docs">
     {{#if this.currentVersion.yanked}}
       <p>
