--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -1,3 +1,18 @@
+#stats {
+    margin-left: auto;
+    padding: 10px;
+
+    span { margin-left: 10px; }
+    .num {
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .downloads {
+        display: flex;
+        align-items: center;
+    }
+}
+
 #my-crate-lists {
     flex-direction: column;
     flex-grow: 2;
