--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -41,6 +41,38 @@ noscript {
     }
 }
 
+input.search {
+    font-size: 90%;
+    border: none;
+    color: black;
+    width: 100%;
+    margin-left: 16px;
+    margin-right: 16px;
+    padding: 5px 5px 5px 25px;
+    background-color: white;
+    background-image: url('/assets/search.png');
+    background-repeat: no-repeat;
+    background-position: 6px 6px;
+    background-size: 14px 15px;
+    border-radius: 15px;
+    box-shadow: none;
+}
+
+.mobile-search {
+    display: none;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+
+    input.search {
+        margin: 0;
+    }
+
+    @media only screen and (max-width: 820px) {
+        display: block;
+    }
+}
+
 .search-label {
     position: absolute;
     left: -10000px;
