application: Move `doc-links` CSS class into CSS module

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -82,6 +82,11 @@ input.search {
     overflow: hidden;
 }
 
+.doc-links {
+    left: auto;
+    min-width: 150px;
+}
+
 .main {
     display: flex;
     flex-direction: column;
