application: Move `nav` CSS class into CSS module

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -92,6 +92,15 @@ input.search {
     min-width: 150px;
 }
 
+.nav {
+    text-align: right;
+    margin-right: 5px;
+
+    @media only screen and (max-width: 900px) {
+        display: none;
+    }
+}
+
 .dropdown-button {
     background: none;
     border: 0;
