--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -35,7 +35,7 @@
       <label for="cargo-desktop-search" local-class="search-label">Search</label>
     </form>
 
-    <div class='nav'>
+    <div local-class='nav'>
       <LinkTo @route="crates" @query={{hash letter=null page=1}} data-test-all-crates-link>
         Browse All Crates
       </LinkTo>
