application: Move `menu` CSS class into CSS module

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -101,6 +101,17 @@ input.search {
     }
 }
 
+.menu {
+    text-align: right;
+    margin-right: 5px;
+    flex-grow: 2;
+    display: none;
+
+    @media only screen and (max-width: 900px) {
+        display: block;
+    }
+}
+
 .dropdown-button {
     background: none;
     border: 0;
