--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -87,7 +87,7 @@
       {{/if}}
     </div>
 
-    <div class='menu'>
+    <div local-class='menu'>
       <Dropdown class="dropdown-container" as |dd|>
         <dd.Trigger class="dropdown" local-class="dropdown-button">
           Menu
