--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -72,7 +72,7 @@
             <span class='arrow'></span>
           </dd.Trigger>
 
-          <dd.Content @tagName="ul" class="dropdown current-user-links">
+          <dd.Content @tagName="ul" class="dropdown" local-class="current-user-links">
             <li><LinkTo @route="dashboard">Dashboard</LinkTo></li>
             <li><LinkTo @route="me">Account Settings</LinkTo></li>
             <li><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></li>
@@ -93,7 +93,7 @@
           Menu
           <span class='arrow'></span>
         </dd.Trigger>
-        <dd.Content @tagName="ul" class="dropdown current-user-links">
+        <dd.Content @tagName="ul" class="dropdown" local-class="current-user-links">
           <li><LinkTo @route="crates">Browse All Crates</LinkTo></li>
           {{#if this.session.currentUser}}
             <li><LinkTo @route="dashboard">Dashboard</LinkTo></li>
