--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,7 +4,7 @@
 <GoogleJsapi />
 
 <div local-class="application">
-  <nav id="header">
+  <nav local-class="header">
     <LinkTo @route="index" @tabindex="-1">
       <img src="/assets/Cargo-Logo-Small.png" id="logo"
            height="100" width="100" alt="Cargo Logo">
