dashboard: Move `stats` CSS class into CSS module

--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -3,10 +3,10 @@
 <div class="crates-heading">
   {{svg-jar "dashboard"}}
   <h1>My Dashboard</h1>
-  <div id="stats">
-    <div class='downloads'>
+  <div local-class="stats">
+    <div local-class='downloads'>
       <img class="download" src="/assets/download.svg">
-      <span class='num'>{{format-num this.visibleStats.total_downloads}}</span>
+      <span local-class='num'>{{format-num this.visibleStats.total_downloads}}</span>
       <span class='desc small'>Total Downloads</span>
     </div>
   </div>
