dashboard: Remove unused `download` CSS class assignment

--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -5,7 +5,7 @@
   <h1>My Dashboard</h1>
   <div local-class="stats">
     <div local-class='downloads'>
-      <img class="download" src="/assets/download.svg">
+      <img src="/assets/download.svg">
       <span local-class='num'>{{format-num this.visibleStats.total_downloads}}</span>
       <span class='desc small'>Total Downloads</span>
     </div>
