--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -23,7 +23,7 @@
             order: 1;
             margin-right: 0;
         }
-        #my-crates, #my-following { margin: 0; }
+        #my-crates { margin: 0; }
     }
 }
 
