--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -14,8 +14,8 @@
 
 
 <div id='my-info'>
-  <div id='my-crate-lists' class='crate-lists'>
-    <div class='header'>
+  <div local-class="my-crate-lists" class='crate-lists'>
+    <div local-class="header">
       <h2>
         {{svg-jar "my-packages"}}
         My Crates
