dashboard: Move `my-feed` CSS class into CSS module

--- a/app/styles/dashboard.module.scss
+++ b/app/styles/dashboard.module.scss
@@ -30,6 +30,15 @@
     }
 }
 
+.my-feed {
+    flex-grow: 5;
+    h2 { font-size: 105%; }
+
+    @media only screen and (max-width: 750px) {
+        order: 0;
+    }
+}
+
 .feed-row {
     composes: row from global;
     display: flex;
