--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -44,7 +44,7 @@
     <CrateDownloadsList @crates={{this.visibleFollowing}} />
   </div>
 
-  <div id='my-feed'>
+  <div local-class="my-feed">
     <h2>
       {{svg-jar "latest-updates"}}
       Latest Updates
