dashboard: Move `my-info` CSS class into CSS module

--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -12,8 +12,7 @@
   </div>
 </div>
 
-
-<div id='my-info'>
+<div local-class="my-info">
   <div local-class="my-crate-lists" class='crate-lists'>
     <div local-class="header">
       <h2>
