--- a/app/styles/dashboard.module.scss
+++ b/app/styles/dashboard.module.scss
@@ -13,6 +13,14 @@
     }
 }
 
+.my-info {
+    display: flex;
+
+    @media only screen and (max-width: 750px) {
+        flex-direction: column;
+    }
+}
+
 .my-crate-lists {
     flex-direction: column;
     flex-grow: 2;
