--- a/app/styles/index.module.scss
+++ b/app/styles/index.module.scss
@@ -58,6 +58,7 @@
 }
 
 .lists {
+    display: flex;
     flex-wrap: wrap;
     justify-content: left;
 
@@ -71,5 +72,43 @@
         @media only screen and (max-width: 550px) {
             width: 100%;
         }
+    }
+
+    h2 {
+        font-size: 105%;
+        line-height: 20px;
+    }
+
+    > section[aria-busy="true"] > h2::after {
+        content: '';
+        background-image: url('/assets/ajax-loader.gif');
+        display: inline-block;
+        height: 16px;
+        width: 16px;
+    }
+
+    ul, ol { list-style: none; padding: 0; }
+    li { margin: 8px 0; }
+
+    li a {
+        width: 100%;
+        color: lighten($main-color, 10%);
+        text-decoration: none;
+        background-color: $main-bg-dark;
+        font-size: 90%;
+        padding: 20px 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &:hover { background-color: darken($main-bg-dark, 5%); }
+
+        span {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        img { vertical-align: middle; }
     }
 }
