--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -35,7 +35,7 @@
   </div>
 </div>
 
-<div local-class='lists' class='crate-lists'>
+<div local-class='lists'>
   <section id='new-crates' data-test-new-crates aria-busy="{{this.dataTask.isRunning}}">
     <h2>New Crates</h2>
     <CrateListNewest @crates={{this.model.new_crates}} />
