dashboard: Extract `label` CSS classes

--- a/app/styles/dashboard.module.scss
+++ b/app/styles/dashboard.module.scss
@@ -11,6 +11,11 @@
         display: flex;
         align-items: center;
     }
+
+    .label {
+        color: #858585;
+        font-size: 80%;
+    }
 }
 
 .my-info {
