--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -7,7 +7,7 @@
     <div local-class='downloads'>
       <img src="/assets/download.svg">
       <span local-class='num'>{{format-num this.visibleStats.total_downloads}}</span>
-      <span class='desc small'>Total Downloads</span>
+      <span local-class="label">Total Downloads</span>
     </div>
   </div>
 </div>
