--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -13,7 +13,7 @@
 </div>
 
 <div local-class="my-info">
-  <div local-class="my-crate-lists" class='crate-lists'>
+  <div local-class="my-crate-lists">
     <div local-class="header">
       <h2>
         {{svg-jar "my-packages"}}
@@ -28,7 +28,7 @@
     </div>
     <CrateDownloadsList @crates={{this.visibleCrates}} />
 
-    <div class='header'>
+    <div local-class='header'>
       <h2>
         {{svg-jar "following"}}
         Following
