Remove unused `id=crates` assignments

--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -87,7 +87,7 @@
   </div>
 </div>
 
-<div id='crates' class='white-rows'>
+<div class='white-rows'>
   {{#each this.model as |crate|}}
     <CrateRow @crate={{crate}} />
   {{/each}}
