--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -75,7 +75,7 @@
   </div>
 </div>
 
-<div id='crates' class='white-rows'>
+<div class='white-rows'>
   {{#each this.model as |crate index|}}
     <CrateRow @crate={{crate}} data-test-crate-row={{index}} />
   {{/each}}
