--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -70,7 +70,7 @@
       </div>
     </div>
 
-    <div id='crates' class='white-rows'>
+    <div class='white-rows'>
       {{#each this.model.crates as |crate|}}
         <CrateRow @crate={{crate}} />
       {{/each}}
