--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div id='crates' class='white-rows'>
+    <div class='white-rows'>
       {{#each this.model.crates as |crate|}}
         <CrateRow @crate={{crate}} />
       {{/each}}
