--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div id='crates' class='white-rows'>
+  <div class='white-rows'>
     {{#each this.model as |crate index|}}
       {{#if crate.exact_match}}
         <div class='exact-match'>
