search: Move `exact-match` CSS class into CSS module

--- a/app/styles/search.module.scss
+++ b/app/styles/search.module.scss
@@ -1,3 +1,12 @@
 .loading-spinner {
     margin: 0 15px;
 }
+
+.exact-match {
+    margin-bottom: 40px;
+    border-bottom: solid beige;
+
+    h1 {
+        color: green
+    }
+}
