--- a/app/components/crate-row.module.scss
+++ b/app/components/crate-row.module.scss
@@ -1,3 +1,10 @@
+.name {
+    color: $main-color;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 120%;
+}
+
 .description {
     color: $main-color-light;
     font-size: 80%;
