--- a/app/components/crate-row.module.scss
+++ b/app/components/crate-row.module.scss
@@ -5,6 +5,10 @@
     font-size: 120%;
 }
 
+.version-badge {
+    margin-left: 10px;
+}
+
 .description {
     color: $main-color-light;
     font-size: 80%;
