--- a/app/components/crate-badge.hbs
+++ b/app/components/crate-badge.hbs
@@ -1,8 +1,7 @@
-<span class="vers" ...attributes>
-  <img
-      src="https://img.shields.io/badge/crates.io-v{{ this.version }}-{{ this.color }}.svg?longCache=true"
-      alt="{{ this.crate.max_version }}"
-      title="{{ this.crate.name }}’s current version badge"
-      data-test-version-badge>
-  
-</span>
+<img
+    src="https://img.shields.io/badge/crates.io-v{{ this.version }}-{{ this.color }}.svg?longCache=true"
+    alt="{{ this.crate.max_version }}"
+    title="{{ this.crate.name }}’s current version badge"
+    data-test-version-badge
+    ...attributes
+>
