CrateRow: Extract `description-box` CSS class

--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -1,5 +1,5 @@
 <div class="crate row" data-test-crate-row ...attributes>
-  <div class='desc'>
+  <div local-class="description-box">
     <div class='info'>
       <LinkTo
         @route="crate"
