--- a/app/components/crate-row.module.scss
+++ b/app/components/crate-row.module.scss
@@ -1,3 +1,10 @@
+.description-box {
+    padding-top: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+}
+
 .name {
     color: $main-color;
     font-weight: bold;
